# saw-ring

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: data_visualization.py  main.py  utils.py
app-ble/visualization/: main.py
app-serial/: utils.py  visualization.py
app-tcp/: SVM_model.pkl  data_visualization.py  har_gesture.py
app-tcp/controller/: app.py  utils.py
app-tcp/visualization/: har_plot.py  main.py
app-udp/: get_audio.py  visualization.py
app/visualization/: fft.py  main.py
arduino/ble/: ble.ino
arduino/esp32_wroom_test/: esp32_wroom_test.ino
arduino/esp_serial/: esp_serial.ino
arduino/main/: main.ino
arduino/tcp/: tcp.ino
arduino/udp/: udp.ino
data_collection/: experiment_1.txt  experiment_2.txt
data_collection/src/: ble_data_collector.py  saw_collector.py  tcp_data_collector.py  udp_data_collector.py
src/: analysis_wav.py  config.py  get_pcm.py  main.py  mfcc.py  process_fft.py  processing.py  realtime_fft.py  serial_pcm_fft.py  signal_process.py  udp.py  udp_fft.py
src/surface_recognition/: inference.py  models.py
