[project]
name = "saw-ring-ino"
version = "0.1.0"
description = ""
authors = [
    {name = "koushi hiraoka",email = "hiraoka.koushi@arakawa-lab.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyserial (>=3.5,<4.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pyqt6 (>=6.9.1,<7.0.0)",
    "pyqtgraph (>=0.13.7,<0.14.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "scikit-learn (==1.7.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false